--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -6,10 +6,10 @@
 
 // Fonts
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;1,100;1,200;1,300;1,500;1,600&display=swap');
- 
+
 // Variables
 // @import 'variables';
- 
+
 // Bootstrap
 
 /*
@@ -91,7 +91,7 @@
   }
 }
 
- 
+
 .select2-container{
   &.select2-container--open {
     z-index: 9999 !important;
@@ -577,7 +577,7 @@ body{
             left: 0px;
             font-size: 25px;
             font-weight: 100;
-            
+
           }
         }
     }
@@ -617,7 +617,7 @@ body{
       background-color: #E85451;
       border-color: #E85451
 
-     
+
     }
 
     a {
@@ -627,14 +627,14 @@ body{
       background-color: #fff;
       color: var(--grey-colors-color-grey-3, #828282);
       // border-color: #fff
-   
+
     }
-  
+
     &:first-child a {
       /* Styles for the first anchor tag inside the first li */
-  
+
     }
-  
+
     &:last-child a {
       /* Styles for the last anchor tag inside the last li */
 
@@ -652,7 +652,7 @@ body{
     table.dataTable thead .sorting_desc::before,
      table.dataTable thead .sorting_desc_disabled::before {
      content: '\2191' !important;
-    
+
      width: 20px;
      height: 17px;
     top: 18px;
@@ -736,7 +736,7 @@ span.badge.bg-primary.Rejected{
 }
 
 
-.closeSidebar{ 
+.closeSidebar{
                 .title-text {
                               display: none;
 
@@ -745,9 +745,9 @@ span.badge.bg-primary.Rejected{
            nav#sidebarMenu {
                               width: 5%;
                           }
-            
+
                           .sideBarButton {
-  
+
                           }
               .ColumnWidth {
                 width: 94.8%;
@@ -841,7 +841,7 @@ line-height: normal;
   font-size: 11.83px;
   font-style: normal;
   font-weight: 400;
-  line-height: 15.72px; 
+  line-height: 15.72px;
 }
 
 .formRedButton {
@@ -1244,7 +1244,7 @@ label.input-group-text.custom-file-button {
 
 #sidebarMenu .mws-sticky-sidebar {
   background-color: #232323 !important;
-  background-image: url(images/graana_sidebar.png);
+  //background-image: url(images/graana_sidebar.png);
   background-position: 0 10px;
   background-repeat: no-repeat;
   padding-top: 30px !important;
