--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -1255,3 +1255,6 @@ label.input-group-text.custom-file-button {
   border-radius: 3px;
   font-size: 12px;
 }
+.closeSidebar .table{
+  width: 100% !important;
+}
