--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -261,9 +261,9 @@ body{
   }
   .mws-main-header{
     position: relative;
-    background-color: transparent;
+    background-color: #f1f2f4;
     border-bottom: none;
-
+    border-radius: 10px;
   }
 
   .mws-main-body{
@@ -1258,3 +1258,7 @@ label.input-group-text.custom-file-button {
 .closeSidebar .table{
   width: 100% !important;
 }
+//.row > *{
+//  width: 0%;
+//
+//}
